--- a/portfolio-details11.html
+++ b/portfolio-details11.html
@@ -52,9 +52,8 @@
     </a>
 
     <div class="social-links text-center">
-      <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-      <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
-    </div>
+      <a href="https://www.instagram.com/sofiatnjg" class="instagram" target="_blank"><i class="bi bi-instagram"></i></a>
+      <a href="https://www.linkedin.com/in/shofiyyah-t-631b72284/" class="linkedin" target="_blank"><i class="bi bi-linkedin"></i></a>
 
     <nav id="navmenu" class="navmenu">
       <ul>
