--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -136,16 +136,17 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: NDVI and LST</li>
+                <li><strong>Course</strong>: Introduction to Satellite Meteorology</li>
+                <li><strong>Project date</strong>: 04 November, 2024</li>
+                <li><strong>Project URL</strong>: <a href="https://www.canva.com/design/DAGGdrpwjDs/nINpTBb6UQR5nftUBkDjvQ/edit?utm_content=DAGGdrpwjDs&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">www.surabaya.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
+              <h2>Analyzed LST and NDVI Values to Identify and Compare the Phenomenon of Urban Heat 
+                Island (UHI) in Surabaya for 2019 and 2024     </h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                The map is used to analyze the increase in land surface temperature based on the Normalized Difference Vegetation Index for Surabaya in 2019 and 2024, and identify urban heat island events.
               </p>
             </div>
           </div>
