--- a/portfolio-details3.html
+++ b/portfolio-details3.html
@@ -136,16 +136,16 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: GPM</li>
+                <li><strong>Course</strong>: Introduction to Satellite Meteorology</li>
+                <li><strong>Project date</strong>: 30 November, 2024</li>
+                <li><strong>Project URL</strong>: <a href="https://colab.research.google.com/drive/1_cbkp9AomNBVhZUU0DQUfH9ReVimH5M6?usp=sharing">www.gpm.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
+              <h2>Global Precipitation Measurement</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Analyzed Fany Tropical Storm Mei 1st 2019.
               </p>
             </div>
           </div>
