--- a/portfolio-details2.html
+++ b/portfolio-details2.html
@@ -136,16 +136,17 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Composite</li>
+                <li><strong>Course</strong>: Introduction to Satellite Meteorology</li>
+                <li><strong>Project date</strong>: 23 November, 2024</li>
+                <li><strong>Project URL</strong>: <a href="https://colab.research.google.com/drive/1M74BxcfPkWgGuEJazp7B4MOgxpQeW6N-?usp=sharing">www.satelite.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
+              <h2>Analyzed the Occurrence of Tropical Storm Trami on July 21st, 2024, using HSD and NetCDF 
+                data of Himawari-9 from JAXA </h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                identify the Phenomenon and Impact to Philippines and Vietnam.
               </p>
             </div>
           </div>
