--- a/portfolio-details4.html
+++ b/portfolio-details4.html
@@ -136,16 +136,16 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Map Plot Papua</li>
+                <li><strong>Course</strong>: Tropical Meteorology</li>
+                <li><strong>Project date</strong>: 19 Desember, 2024</li>
+                <li><strong>Project URL</strong>: <a href="https://colab.research.google.com/drive/1eUQV2KeB--U9P6zJ_6WMMxjRV3aRldHG?usp=sharing">www.enso.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
+              <h2>Pearson correlation of SOI index for four seasons with 30 years of precipitation (1991-2021)</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                analyzing the influence of the ENSO phenomenon on rainfall variability on the island of Papua.
               </p>
             </div>
           </div>
