--- a/portfolio-details12.html
+++ b/portfolio-details12.html
@@ -135,16 +135,16 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Map Plot Kalimantan</li>
+                <li><strong>Course</strong>: Tropical Meteorology</li>
+                <li><strong>Project date</strong>: 02 January, 2025</li>
+                <li><strong>Project URL</strong>: <a href="https://colab.research.google.com/drive/13nRvtE3WgHsP8RIQMsIpjFRbiCWRWPhh?usp=sharing">www.monsun.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
+              <h2>Analysis of the influence of the monsoon phenomenon on Precipitation variability on the island of Kalimantan over 30 years (1991-2021) using the AUSMI index</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Understanding the influence of monsoon phenomena on precipitation variability for four seasons in Kalimantan with the Ausmi index.
               </p>
             </div>
           </div>
