--- a/portfolio-details5.html
+++ b/portfolio-details5.html
@@ -136,16 +136,16 @@
             <div class="portfolio-info" data-aos="fade-up" data-aos-delay="200">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Map Plot Indonesia</li>
+                <li><strong>Course</strong>: Statistical Meteorology</li>
+                <li><strong>Project date</strong>: 08 October, 2024</li>
+                <li><strong>Project URL</strong>: <a href="https://colab.research.google.com/drive/1Cci0s-E48KJYi0_5g6TFjLYUbHUk7Cly?usp=sharing">www.elnino.com</a></li>
               </ul>
             </div>
             <div class="portfolio-description" data-aos="fade-up" data-aos-delay="300">
-              <h2>Exercitationem repudiandae officiis neque suscipit</h2>
+              <h2>Probability of Indonesia's Precipitation being below normal during el nino in four seasons during (1950-2013)</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                Identifying how El Nino affects Precipitation in Indonesia during (1950-2013).
               </p>
             </div>
           </div>
